# buzzni-ai-reco-ml-serving

./: pyproject.toml
buzzni/ai/reco/mlserving/: _serving_app.py
buzzni/ai/reco/mlserving/health/: health_check_runner.py
buzzni/ai/reco/mlserving/predictors/: _base.py  _rest_predictor.py  utils.py
buzzni/ai/reco/mlserving/predictors/tensorflow/: http.py
buzzni/ai/reco/mlserving/webframeworks/: factory.py
buzzni/ai/reco/mlserving/webframeworks/falcon/: error_handler.py  falcon_framework.py  health_resource.py  inference_resource.py
examples/: sample_app.py  tf_serving.py
