[tool.poetry]
name = "buzzni-ai-reco-ml-serving"
version = "0.3.6"
description = ""
authors = ["edwin <edwin@buzzni.com>"]

packages = [
	{ include = "buzzni" }
]

[tool.poetry.dependencies]
python = "^3.7"
coverage = "^5.5"
requests = "^2.25.1"
flake8 = "^3.9.0"
flake8-expression-complexity = "^0.0.9"
pep8-naming = "^0.11.1"
validr = "^1.2.1"
falcon = "^3.0.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
